Revert "Revert "Update to MTP"" (#990)

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <!-- This works around issues with dotnet test which are fixed in https://github.com/dotnet/sdk/pull/51794 -->
+    <!-- It can be safely removed once .NET SDK 10.0.101 is out and is used in the repo -->
+    <Configuration Condition="'$(Configuration)' == ''">Debug</Configuration>
+
     <RepoRoot>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))</RepoRoot>
     <ArtifactsDir Condition="'$(ArtifactsDir)' == ''">$([MSBuild]::NormalizeDirectory('$(RepoRoot)', 'artifacts'))</ArtifactsDir>
     <ArtifactsObjDir>$([MSBuild]::NormalizeDirectory('$(ArtifactsDir)', 'obj'))</ArtifactsObjDir>
@@ -29,8 +33,9 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <VSTestLogger Condition="'$(VSTestLogger)' == ''">trx%3bLogFileName=$(MSBuildProjectName).$(TargetFramework).$(OS).trx</VSTestLogger>
-    <VSTestResultsDirectory Condition="'$(VSTestResultsDirectory)' == ''">$(ArtifactsTestResultsDir)</VSTestResultsDirectory>
+    <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
+    <_MTPResultsDirectory>$(ArtifactsTestResultsDir)</_MTPResultsDirectory>
+    <TestingPlatformCommandLineArguments>$(TestingPlatformCommandLineArguments) --results-directory $(_MTPResultsDirectory) --report-trx --report-trx-filename $(MSBuildProjectName).$(TargetFramework).$(OS).trx</TestingPlatformCommandLineArguments>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
